cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_291.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/initthread.c:179: error: DEAD_STORE
  The value written to &hands (type thread_event_handler_st**) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/initthread.c:179:13: Write of unused value
177.   
178.           if (hands == handsin) {
179.               hands = sk_THREAD_EVENT_HANDLER_PTR_delete(gtr->skhands, i);
                   ^
180.               CRYPTO_THREAD_unlock(gtr->lock);
181.               return;
